--- a/index.html
+++ b/index.html
@@ -20,3 +20,35 @@
     <script src="js/hw6.js"></script>
   </body>
 </html>
+
+  //script
+  let parentDOM = document.getElementById('parent-id');
+let test1 = parentDOM.getElementById('test1');
+
+el.innerHTML ='<p>This is the sample of document Object model</p>'
+  
+  //css
+  body {
+  background-color: cornsilk;
+  padding: 1px;}
+
+ 
+h2 {
+  color: chocolate;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: .3em;
+  margin: 0 0 23px 0;}
+ 
+p {
+  background-color: chocolate;
+  color: chartreuse; 
+  padding: 5px;
+  margin: 15px auto;
+  min-width: 20%; 
+  max-width: 36%; 
+  border-radius: 1px;
+  text-align: center;
+}
